--- a/index.html
+++ b/index.html
@@ -41,18 +41,6 @@
 
     <section class="hero">
 
-        <div class="hero-img">
-            <a>
-                <img loading="lazy" src="Kish images/5b8007a4-5a6c-479f-b064-75aede1794b1.JPG" alt="Header image">
-            </a>
-        </div>
-
-        <div class="hero-img2">
-            <a>
-                <img loading="lazy" src="Kish images/5b8007a4-5a6c-479f-b064-75aede1794b1.JPG" alt="Header image">
-            </a>
-        </div>
-
         <div class="hero-wrapper">
             <div class="hero-text">
                 <h1 class="moments"> MOMENTS </h1>
@@ -65,7 +53,23 @@
                     Storyteller</p>
             </div>
 
-         
+            <div class="hero-img-wrapper">
+                <div class="hero-img">
+                    <a>
+                        <img loading="lazy" src="Kish images/5b8007a4-5a6c-479f-b064-75aede1794b1.JPG"
+                            alt="Header image">
+                    </a>
+                </div>
+            </div>
+
+            <div class="hero-img2-wrapper">
+                <div class="hero-img2">
+                    <a>
+                        <img loading="lazy" src="Kish images/5b8007a4-5a6c-479f-b064-75aede1794b1.JPG"
+                            alt="Header image">
+                    </a>
+                </div>
+            </div>
 
         </div>
 
