--- a/index.html
+++ b/index.html
@@ -133,6 +133,18 @@
 
     </footer>
 
+    <!-- MODAL LIGHTBOX -->
+
+    <div class="modal">
+        <div class="modal-background"></div>
+        <div class="modal-close">Close</div>
+        <div class="modal-content"></div>
+    </div>
+
+    <script src="jquery.js"></script>
+    <script src="main.js"></script>
+
+
 </body>
 
 </html>
