--- a/about.html
+++ b/about.html
@@ -30,9 +30,9 @@
         <!-- HEADER MENU -->
 
         <nav>
-            <a class="selected" href="#">About</a>
+            <a class="selected" href="">About</a>
             <a href="index.html#gallery">Gallery</a>
-            <a href="#">Contact</a>
+            <a target="_blank"  href="https://www.instagram.com/momentswith_kish/">Contact</a>
         </nav>
 
     </header>
@@ -68,12 +68,10 @@
 
         <footer class="about-footer">
 
-
-
             <div>
-                <a href="https://www.instagram.com/momentswith_kish/">Instagram</a>
-                <a href="https://www.linkedin.com/in/kunleademikanra/">LinkedIn</a>
-                <a href="https://x.com/kish_baba_">Twitter</a>
+                <a target="_blank" href="https://www.instagram.com/momentswith_kish/">Instagram</a>
+                <a target="_blank" href="https://www.linkedin.com/in/kunleademikanra/">LinkedIn</a>
+                <a target="_blank" href="https://x.com/kish_baba_">Twitter</a>
 
         </footer>
 
