--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <nav>
             <a href="about.html">About</a>
             <a href="#gallery">Gallery</a>
-            <a href="#">Contact</a>
+            <a target="_blank" href="https://www.instagram.com/momentswith_kish/">Contact</a>
         </nav>
 
     </header>
@@ -127,9 +127,9 @@
         </a>
 
         <div>
-            <a href="https://www.instagram.com/momentswith_kish/">Instagram</a>
-            <a href="https://www.linkedin.com/in/kunleademikanra/">LinkedIn</a>
-            <a href="https://x.com/kish_baba_">Twitter</a>
+            <a target="_blank" href="https://www.instagram.com/momentswith_kish/">Instagram</a>
+            <a target="_blank" href="https://www.linkedin.com/in/kunleademikanra/">LinkedIn</a>
+            <a target="_blank" href="https://x.com/kish_baba_">Twitter</a>
 
     </footer>
 
