--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="#gallery">Gallery</a>
             <a target="_blank" href="https://www.instagram.com/momentswith_kish/">Contact</a>
         </nav>
-
+        <button id="theme-toggle">☀️ 🌙</button>
     </header>
 
     <!-- HERO -->
@@ -143,7 +143,6 @@
 
     <script src="jquery.js"></script>
     <script src="main.js"></script>
-
 
 </body>
 
