--- a/about.html
+++ b/about.html
@@ -32,7 +32,8 @@
         <nav>
             <a class="selected" href="">About</a>
             <a href="index.html#gallery">Gallery</a>
-            <a target="_blank"  href="https://www.instagram.com/momentswith_kish/">Contact</a>
+            <a target="_blank" href="https://www.instagram.com/momentswith_kish/">Contact</a>
+            <button id="theme-toggle">☀️ 🌙</button>
         </nav>
 
     </header>
@@ -61,10 +62,7 @@
 
             </div>
 
-
-
         </section>
-
 
         <footer class="about-footer">
 
@@ -74,6 +72,9 @@
                 <a target="_blank" href="https://x.com/kish_baba_">Twitter</a>
 
         </footer>
+
+        <script src="jquery.js"></script>
+        <script src="main.js"></script>
 
     </body>
 
